fix: overflow

--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins&display=swap');
 
 header .container{
-    width: 100vw;
-    height: Hug (72px)px;
-    padding: 16px 64px 16px 64px;
+    width: 100%;
+    height: 72px;
+    padding: 16px 64px;
     gap: 0px;
     border: 0px 0px 1px 0px;
     display: flex;
@@ -11,6 +11,7 @@ header .container{
     align-items: center;
     background: #FFFFFF;
     border-bottom: 1px solid #E2E8F0;
+    box-sizing: border-box;
 }
 
 header .logo{
